# uv-build-namespace

./: README.md  pyproject.toml
libraries/fake_library/: README.md  pyproject.toml
libraries/fake_library/matsbrain/fake_library/: __init__.py  library.py
services/fake_service/: README.md  pyproject.toml
services/fake_service/matsbrain/fake_service/: main.py
